examples-generated/namespaced/apigatewayv2/v1beta1/deployment.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0


apiVersion: apigatewayv2.aws.m.upbound.io/v1beta1
kind: Deployment
metadata:
  annotations:
    meta.upbound.io/example-id: apigatewayv2/v1beta1/deployment
  labels:
    testing.upbound.io/example-name: example
  name: example
  namespace: upbound-system
spec:
  forProvider:
    apiIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    description: Example deployment
    region: us-west-1
